<resources>
    <string name="app_name">Ribbit</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="signup_text">Don\'t have an account? Sign Up!</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="email_hint">Email</string>
    <string name="signup_button_label">SIGN UP</string>
    <string name="signup_error_message">Please make sure you enter a username, password and email address</string>
    <string name="signup_error_title">Oopss!</string>
    <string name="signup_error_parse">An error occurred during signup</string>
    <string name="login_error_message">Please make sure you enter a username, password</string>
    <string name="login_error_title">Oopss!</string>
    <string name="login_error_parse">An error occurred during login</string>
    <string name="title_activity_home">HomeActivityActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="menu_logout_label">Logout</string>
    <string name="empty_inbox_label">No new messages</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">EditFriendsActivity</string>
    <string name="error_title">We\'re sorry</string>
    <string name="no_friends_available_label">There are no users available</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="video_file_size_warning">The selected video must be less than 10MB</string>
    <string name="error_opening_file">There was a problem with the selected file</string>
    <string name="error_file_size_too_large">Selected file is too large</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_recipients">RecipientsActivity</string>
    <string name="empty_recipients_list_message">Choose some friends first!</string>
    <string name="action_send">Send</string>
    <string name="error_selecting_file">There was an error with the selected file.</string>
    <string name="success_message">Message sent!</string>
    <string name="title_activity_view_image">Ribbit</string>
    <string name="login_invalid_credentials">Username and/or password invalid</string>
    <string name="no_network_available_message">Seems you are offline</string>
    <string name="content_desc_background">Ribbit Frog Background Image</string>
    <string name="subtitle">An Android Project</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="content_desc_button_divider">Button Divider</string>
    <string name="sending_message">Sendig message</string>
    <string name="please_wait">Please wait...</string>
    <string name="content_desc_message_item">Message icon</string>
    <string name="test_name">Test Name</string>
    <string name="content_description_user_avatar">User avatar</string>
</resources>
